--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -149,7 +149,7 @@
   news2:
   
 - title: "Reference-free detection of minute, non-visible, damage using full-field, high-resolution mode shapes output-only identified from digital videos of structures"
-  image: damage.jpg
+  image: damage.jpeg
   description: Using the full-field, very high-resolution mode shape enables detection of minute, non-visible, damage in a global, completely passive sensing manner, which was previously not possible to achieve.
   authors: Y. Yang, C. Dorn, T. Mancini, Z. Talken, J. Theiler, G. Kenyon, C. Farrar, D. Mascarenas
   link:
