--- a/_data/projlist.yml
+++ b/_data/projlist.yml
@@ -1,190 +1,9 @@
 - title: "Hierarchical deep learning for data-driven identification of reduced-order models of nonlinear dynamical systems"
   image: FRF-NNM.png
   description: we present a hierarchical deep learning approach for identifying optimal low-order models of nonlinear dynamical systems. It simultaneously identifies the nonlinear normal modal (NNM) subspace with a hierarchical order and the associated nonlinear modal dynamics.
-  authors: S. Li, Y. Yang
-  link:
-    url: https://link.springer.com/article/10.1007/s11071-021-06772-x
-    display: Nonlinear Dynamics 105, 3409–3422 (2021)
-  highlight: 1
-  news2:
-
-- title: "Data-driven identification of nonlinear normal modes via physics-integrated deep learning"
-  image: nnms.png
-  description: we present a new data-driven framework based on physics-integrated deep learning for nonlinear modal identification of unknown nonlinear dynamical systems.
-  authors: S. Li, Y. Yang
-  link:
-    url: https://link.springer.com/article/10.1007/s11071-021-06931-0
-    display: Nonlinear Dynamics 106, 3231–3246 (2021)
-  highlight: 1
-  news2:
-
-
-- title: "Noncontact super-resolution guided wave array imaging of subwavelength defects using a multiscale deep learning approach"
-  image: IJSHM.png
-  description: we present a non-contact super-resolution guided wave array imaging approach with deep learning to visualize sub-wavelength defects in plate-like structures.
-  authors: H. Song, Y. Yang
-  link:
-    url: https://journals.sagepub.com/doi/full/10.1177/1475921720942958
-    display: Structural Health Monitoring 20(4), 1904-1923 (2020)
-  highlight: 1
-  news2:
-
-- title: "Super-resolution visualization of subwavelength defects via deep learning-enhanced ultrasonic beamforming: A proof-of-principle study"
-  image: tsne.png
-  description: we enable super-resolution ultrasonic beamforming that computationally exceeds the diffraction limit and visualizes subwavelength defects.
-  authors: H. Song, Y. Yang
-  link:
-    url: https://www.sciencedirect.com/science/article/pii/S0963869520302164
-    display: NDT & E International 116, 102344 (2020)
-  highlight: 1
-  news2:
-  
-- title: "3D structural vibration identification from dynamic point clouds"
-  image: 3D.jpg
-  description:  We identify 3-Dimensional full-field modes of dynamic structures from point cloud data acquired using a commercial, low-cost, time-of-flight imager. 
-  authors: M. Silva, A. Green, J. Morales, P. Meyerhofer, Y. Yang, E. Figueiredoe, J. Costa, D. Mascarenas
-  link:
-    url: https://www.sciencedirect.com/science/article/pii/S0888327021007081
-    display: Mechanical Systems and Signal Processing 166, 108352 (2021)
-  highlight: 1
-  news1: see [Best Paper award, IMAC 2021 of Society of Experimental Mechanics (SEM)](https://www.linkedin.com/feed/update/urn:li:activity:6763104376635629568/)
-
-- title: "A recurrent neural network framework with an adaptive training strategy for long-time predictive modeling of nonlinear dynamical systems"
-  image: RNN.png
-  description: we explicitly incorporate the multi-step prediction with error accumulation and an adaptive training strategy into model training to improve long-time prediction of future states of nonlinear dynamics.
-  authors: S. Li, Y. Yang
-  link:
-    url: https://www.sciencedirect.com/science/article/pii/S0022460X2100239X
-    display: Journal of Sound and Vibration 506, 116167 (2021)
-  highlight: 1
-  news2:
-  
-- title: "Affinity propagation clustering of full-field, high-spatial-dimensional measurements for robust output-only modal identification A proof-of-concept study"
-  image: APC.png
-  description:  We exploit and visualize the spatial, full-field mode shape associated with each candidate mode to distinguish the physical and spurious modes. 
-  authors: Y. Yang, C. Dorn
-  link:
-    url: https://www.sciencedirect.com/science/article/pii/S0022460X20303059
-    display: Journal of Sound and Vibration 483, 115473 (2020)
-  highlight: 1
-  news2:
-
-- title: "Nonnegative matrix factorization-based blind source separation for full-field and high-resolution modal identification from video"
-  image: nonnegative.jpg
-  description: Our method performs simultaneous processing of all pixel time-series to extract full-field high-resolution mode shapes and other modal parameters. 
-  authors: M. Silva, B. Martinez, E. Figueiredo, J. Costa, Y. Yang, D. Mascarenas
-  link:
-    url: https://www.sciencedirect.com/science/article/pii/S0022460X20304181
-    display: Journal of Sound and Vibration 487, 115586 (2020)
-  highlight: 1
-  news2:
-
-- title: "CNN-LSTM deep learning architecture for computer vision-based modal frequency detection"
-  image: frequency.jpg
-  description:  we introduce CNN-LSTM deep learning based approach that can serve as a backbone for computer vision-based vibration measurement techniques. 
-  authors: R. Yang, S. Singh, M. Tavakkoli, N. Amiri, Y. Yang, M. Karami, R. Rai
-  link:
-    url: https://www.sciencedirect.com/science/article/pii/S0888327020302715
-    display: Mechanical Systems and Signal Processing 144, 106885 (2020)
-  highlight: 1
-  news2:
-
-- title: "Blind, simultaneous identification of full-field vibration modes and large rigid-body motion of output-only structures from digital video measurements"
-  image: rigidbody.jpg
-  description: We simultaneously identify (separate) both the subtle, full-field deformation modes and the dominant rigid-body motion from only the video of the vibrating while moving structure. 
-  authors:  Y. Yang, C. Dorn, C. Farrar, D. Mascarenas
-  link:
-    url: https://www.sciencedirect.com/science/article/pii/S0141029618321370
-    display: Engineering Structures 207, 110183 (2020)
-  highlight: 1
-  news2:
-  
-- title: "Estimation of full-field, full-order experimental modal model of cable vibration from digital video measurements with physics-guided unsupervised machine learning and computer vision"
-  image: cable.jpg
-  description:  This study develops a physics-guided, unsupervised machine learning-based video processing approach that can blindly and efficiently extract the full-field (as many points as the pixel number of the video frame) modal parameters of cable vibration using only the video of an operating (output-only) cable.
-  authors:  Y. Yang, L. Sanchez, H. Zhang, A. Roeder, J. Bowlan, J. Crochet, C. Farrar, D. Mascarenas
-  link:
-    url: https://onlinelibrary.wiley.com/doi/full/10.1002/stc.2358
-    display: Structural Control and Health Monitoring 26(6), e2358 (2019)
-  highlight: 1
-  news2:
- 
-- title: "Estimation of full-field dynamic strains from digital video measurements of output-only beam structures by video motion processing and modal superposition"
-  image: strain.jpg
-  description:  We estimate the full-field (as many measurement points as the pixel number of the video frame on the structure) dynamic strains at high-spatial (pixel)-resolution/density location points from the digital video measurement of output-only vibrating structures.
-  link:
-    url: https://onlinelibrary.wiley.com/doi/full/10.1002/stc.2408
-    display: Structural Control and Health Monitoring 26(10), e2408 (2019)
-  highlight: 1
-  news2:
-  
-- title: "Light Field Imaging of Three-Dimensional Structural Dynamics"
-  image: lightfield.jpg
-  description:  We explore light field imagers - a new camera system that captures the direction light entered the camera - to make depth measurements of scenes and extend modal analysis to three dimensions.
-  authors:  B. Chesebrough, S. Dasari, A. Green, Y. Yang, C. Farrar, D. Mascarenas
-  link:
-    url: https://link.springer.com/chapter/10.1007/978-3-319-74476-6_15
-    display: Structural Health Monitoring, Photogrammetry & DIC 6, 101-108 (2019)
-  highlight: 1
-  news2:
-
-- title: "Efficient full-field vibration measurements and operational modal analysis using neuromorphic event-based imaging"
-  image: retina.jpg
-  description:  This work explores the use of event-based neuromorphic imagers, specifically silicon retinas, an efficient alternative to traditional frame-based video cameras, to perform full-field vibration measurements and operational modal analysis. 
-  authors: C. Dorn, S. Dasari, Y. Yang, C. Farrar, G. Kenyon, P. Welch, D. Mascarenas
-  link:
-    url: https://ascelibrary.org/doi/full/10.1061/%28ASCE%29EM.1943-7889.0001449
-    display: Journal of Engineering Mechanics 144(7), 04018054 (2018)
-  highlight: 1
-  news2:
-
-- title: "Spatiotemporal video-domain high-fidelity simulation and realistic visualization of full-field dynamic responses of structures by a combination of high-spatial-resolution modal model and video motion manipulations"
-  image: simulation.jpg
-  description: We perform spatiotemporal video-domain high-fidelity simulation and realistic visualization of full-field structural dynamics by an innovative combination of the fundamentals of structural dynamic modeling and the advanced video motion manipulation techniques.
-  authors: Y. Yang, C. Dorn, T. Mancini, Z. Talken, G. Kenyon, C. Farrar, D. Mascarenas
-  link:
-    url: https://onlinelibrary.wiley.com/doi/full/10.1002/stc.2193
-    display: Structural Control and Health Monitoring 25(8), e2193 (2018)
-  highlight: 1
-  news2:
-  
-- title: "Reference-free detection of minute, non-visible, damage using full-field, high-resolution mode shapes output-only identified from digital videos of structures"
-  image: damage.jpeg
-  description: Using the full-field, very high-resolution mode shape enables detection of minute, non-visible, damage in a global, completely passive sensing manner, which was previously not possible to achieve.
-  authors: Y. Yang, C. Dorn, T. Mancini, Z. Talken, J. Theiler, G. Kenyon, C. Farrar, D. Mascarenas
-  link:
-    url: https://journals.sagepub.com/doi/full/10.1177/1475921717704385
-    display: Structural Health Monitoring 17(3), 514-531 (2018)
-  highlight: 1
-  news2:
-
-- title: "Blind identification of full-field vibration modes of output-only structures from uniformly-sampled, possibly temporally-aliased (sub-Nyquist), video measurements"
-  image: subnyquist.jpg
-  description:  This work leverages the spatio-temporal separable modal superposition model to perform vibration measurement at a uniform sampling frequency lower than what is required by the Shannon-Nyquist sampling theorem for output-only modal analysis.
-  authors: Y. Yang, C. Dorn, T. Mancini, Z. Talken, S. Nagarajaiah, G. Kenyon, C. Farrar, D. Mascarenas
-  link:
-    url: https://www.sciencedirect.com/science/article/pii/S0022460X16306897
-    display: Journal of Sound and Vibration 390, 232-256 (2017)
-  highlight: 1
-  news2: See [video extras](https://www.sciencedirect.com/science/article/pii/S0022460X16306897#ec0005)
-
-- title: "Full-field, high-spatial-resolution detection of local structural damage from low-resolution random strain field measurements"
-  image: crackstrain.jpg
-  description:  This study explores the feasibility of an alternative approach to this problem - a computational solution in which a limited set of randomly positioned, low-resolution global strain measurements are used to reconstruct the full-field, high-spatial-resolution, two-dimensional (2D) strain field and rapidly detect local damage. 
-  authors: Y. Yang, P. Sun, S. Nagarajaiah, S. Bachilo, RB Weisman
-  link:
-    url: https://www.sciencedirect.com/science/article/pii/S0022460X17302572
-    display: Journal of Sound and Vibration 399, 75-85 (2017)
-  highlight: 1
-  news2:
-  
-- title: "Blind identification of full-field vibration modes from video measurements with phase-based video motion magnification"
-  image: full-field.jpg
-  description:  We develop a novel full-field imaging method for structural dynamic measurement and modal analysis that alleviate the need of structural surface preparation associated with existing vision-based methods and can be implemented in a relatively efficient and autonomous manner with little user supervision and calibration. 
-  authors: Y. Yang, C. Dorn, T. Mancini, Z. Talken, G. Kenyon, C. Farrar, D. Mascarenas
-  link:
-    url: https://www.sciencedirect.com/science/article/pii/S0888327016303272
-    display: Mechanical Systems and Signal Processing 85, 567-590 (2017)
-  highlight: 1
-  news1: see [Researchgate Project](https://www.researchgate.net/project/Full-field-Imaging-and-Modeling-of-Structural-Dynamics-by-Video-Motion-Manipulations), [scope - R&D 100 - Video-Based Dynamic Measurement & Analysis](https://www.youtube.com/watch?v=Khg_k9iRV6U&list=PLDUDFmyKFhnd7OMfpePzJDHraQjSU87Pt&index=23), [R&D 100 Award 2018](https://www.lanl.gov/discover/news-release-archive/2018/November/1119-rd-100-awards.php), [The Best Paper Award of 2015 United Nations International Conference on Sustainable Development, New York](https://www.lanl.gov/discover/news-stories-archive/2015/October/best-paper-award-mascarenas-yang-cattaneo%20.php), [Mary & Richard Mah Publication Award in Engineering Sciences 2018](https://www.lanl.gov/science-innovation/science-highlights/2018/2018-06.php#award-4), 2nd place of 2019 Fedtech, 2nd place of Student Competition in IEEE Resilience Week 2016.
-  news2: See [video extras](https://www.sciencedirect.com/science/article/pii/S0888327016303272#ec0005)
+  #authors: S. Li, Y. Yang
+  #link:
+  #  url: https://link.springer.com/article/10.1007/s11071-021-06772-x
+  #  display: Nonlinear Dynamics 105, 3409–3422 (2021)
+  #highlight: 1
+  #news2:
