--- a/_data/projlist.yml
+++ b/_data/projlist.yml
@@ -5,5 +5,5 @@
   #link:
   #  url: https://link.springer.com/article/10.1007/s11071-021-06772-x
   #  display: Nonlinear Dynamics 105, 3409–3422 (2021)
-  #highlight: 1
+  highlight: 1
   #news2:
