--- a/_data/pictures_misc.yml
+++ b/_data/pictures_misc.yml
@@ -1,7 +1,7 @@
 - title: pic1_description
-  image: dinner.JPG
+  image: dinner.jpg
 - title: pic1_description
-  image: award.JPG
+  image: award.jpg
 - title: pic_description
   image: lab1.jpg
 - title: pic1_description
