--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -10,7 +10,7 @@
   
 
 - name: Shanwu Li
-  photo: .jpg
+  photo: shanwu.jpg
   info: Postdoc, started Nov 2019
   email: sli10@mtu.edu
   number_educ: 2
@@ -18,7 +18,7 @@
   education2: BS, Sichuan University
   
 - name: Homin Song
-  photo: .jpg
+  photo: SongHomin.jpg
   info: Postdoc, started Dec 2018 (since at Argonne)
   email: shm3313@gmail.com
   number_educ: 3
@@ -43,7 +43,7 @@
   education2: BSc Islamic Azad University Central Tehran Branch
 
 - name: Saleh SOTUBADI
-  photo: .jpg
+  photo: saleh.jpg
   info: PhD Student
   email: svalizad@mtu.edu
   number_educ: 2
