--- a/_data/students.yml
+++ b/_data/students.yml
@@ -9,7 +9,7 @@
 #  education4:
 
 - name: Aditya Wagh
- # photo: rock.jpg
+  photo: Aditya.jpg
   info: Master student
  # email: m.ortego.larrazabal@umail.leidenuniv.nl
   number_educ: 0
