--- a/_data/students.yml
+++ b/_data/students.yml
@@ -12,8 +12,8 @@
   photo: Aditya.jpg
   info: Master student
  # email: m.ortego.larrazabal@umail.leidenuniv.nl
-  number_educ: 0
-  education1:
+  number_educ: 1
+  education1: BS University of Mumbai
 
 #- name: João van der Ven
 #  photo: rock.jpg
