--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,5 +1,5 @@
 - name: Charles Dorn
-  #photo: verdoes.jpg
+  photo: Dorn.jpg
   #duration: In the Allan Lab 2015 - 2018, now Project manager at the FMD
   info: since at Argonne 
   email: cdorn@caltech.edu
