--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -27,7 +27,7 @@
   education3: BS, Hanyang University
 
 - name: Abdolvahhab Rostamijavanani
-  photo: .jpg
+  photo: vahhab.jpg
   info: PhD student
   email: arostami@mtu.edu
   number_educ: 2
@@ -35,7 +35,7 @@
   education2: BSc Shiraz (Pahlavi) University
 
 - name: Faraz Abed Azad
-  photo: .jpg
+  photo: Faraz.jpg
   info: PhD student
   email: fabedaza@mtu.edu
   number_educ: 2
