--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -27,7 +27,7 @@
   education3: BS, Hanyang University
 
 - name: Abdolvahhab Rostamijavanani
-  photo: vahhab.jpg
+  photo: vahhab1.jpg
   info: PhD student
   email: arostami@mtu.edu
   number_educ: 2
