--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -32,7 +32,7 @@
   email: arostami@mtu.edu
   number_educ: 2
   education1: MS, Amirkabir University of Technology - Tehran Polytechnic
-  education2: BSc Shiraz (Pahlavi) University
+  education2: BSc Shiraz University
 
 - name: Faraz Abed Azad
   photo: Faraz.jpg
