--- a/_data/students.yml
+++ b/_data/students.yml
@@ -22,7 +22,7 @@
   education1: 
   
 - name: William Jenness
-  photo: william.jpg
+  photo: william1.jpg
   info: Undergraduate student
   number_educ: 0
   education1:
