--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,7 +1,7 @@
 - name: Charles Dorn
   photo: Dorn.jpg
   #duration: In the Allan Lab 2015 - 2018, now Project manager at the FMD
-  info: since at Argonne & Los Alamos
+  info: intern at Argonne & Los Alamos
   email: cdorn@caltech.edu
   number_educ: 2
   education1: PhD, California Institute of Technology
