--- a/_data/news.yml
+++ b/_data/news.yml
@@ -14,7 +14,7 @@
   headline: Postdoc Dr. Shanwu Li presented our physics-integrated deep learning framework for modeling nonlinear dynamical system in AAAI 2021 Fall Symposium. 
 
 - date: September 2021
-  headline: "<b>Our 2nd patent is issued 'Full-Field Imaging Learning Machine (FILM)' (US Patent Number: 11,127,127).</b> See also our 1st patent: <a href='https://patents.google.com/patent/US10567655B2/en'>US Patent 10,567,655</a>"
+  headline: "<b>Our 2nd patent is issued 'Full-field Imaging Learning Machine (FILM)' (US Patent Number: 11,127,127).</b> See also our 1st patent: <a href='https://patents.google.com/patent/US10567655B2/en'>US Patent 10,567,655</a>"
   
 - date: June 2021
   #headline: "<b>Koen wins the Ehrenfest-Afanassjewa prize for best physics thesis of the Netherlands!</b>"
