--- a/_data/students.yml
+++ b/_data/students.yml
@@ -33,11 +33,11 @@
   number_educ: 0
   education1:
   
-- name: Troy Metz
-  photo: troy.jpg
-  info: Undergraduate student
-  number_educ: 0
-  education1:
+#- name: Troy Metz
+#  photo: troy.jpg
+#  info: Undergraduate student
+#  number_educ: 0
+#  education1:
   
 #- name: João van der Ven
 #  photo: rock.jpg
