--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -5,8 +5,8 @@
   number_educ: 4
   education1: BE, Harbin Institute of Technology, 2010
   education2: PhD, Rice University, 2014
-  education3: Postdoc, Los Alamos National Laboratory
-  education4: Staff Scientist, Argonne National Laboratory
+  education3: Postdoc, Los Alamos National Laboratory, 2015-2018
+  education4: Staff Scientist, Argonne National Laboratory, 2018-2019
   
 
 - name: Shanwu Li
