--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,7 +3,12 @@
   #See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
   headline: "**Hiring a postdoc/scientist in Ultrasonics: <a href='https://engineering.academickeys.com/job/2wa9lxd8/PostdocScientist_in_Ultrasonics'>post</a>**."
 
-- date: January 2022
+- date: June 2022
+  #headline: "**Our new paper, on Cooper pairs above Tc, is published in [Science](https://www.science.org/doi/10.1126/science.abe3987)**.
+  #See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
+  headline: Our new paper on generation of selective single-mode guided waves is published in Applied Physics Letters <a href='https://aip.scitation.org/doi/full/10.1063/5.0091284'>[paper].
+
+- date: May 2022
   #headline: "**Our new paper, on Cooper pairs above Tc, is published in [Science](https://www.science.org/doi/10.1126/science.abe3987)**.
   #See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
   headline: Our new paper on imaging of the Fred-Hartman cable-stayed bridge is published in SCHM <a href='https://onlinelibrary.wiley.com/doi/full/10.1002/stc.2985'>[paper].
