--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,6 +3,11 @@
   #See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
   headline: "**Hiring a postdoc/scientist in Ultrasonics: <a href='https://engineering.academickeys.com/job/2wa9lxd8/PostdocScientist_in_Ultrasonics'>post</a>**."
 
+- date: July 2022
+  #headline: "**Our new paper, on Cooper pairs above Tc, is published in [Science](https://www.science.org/doi/10.1126/science.abe3987)**.
+  #See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
+  headline: Dr. Yang receives the 2022 Achenbach Medal "for outstanding achievement in the advancement of SHM" <a href='https://blogs.mtu.edu/engineering/2022/07/06/dr-yongchao-yang-awarded-2022-achenbach-medal/'>[News].
+
 - date: June 2022
   #headline: "**Our new paper, on Cooper pairs above Tc, is published in [Science](https://www.science.org/doi/10.1126/science.abe3987)**.
   #See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
